--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
         <section id="certifications" class="card">
           <div class="section-title">
             <h2>Certifications</h2>
@@ -226,4 +226,5 @@
     })();
   </script>
 </body>
+
 </html>
