Fix HTML encoding issues and update paths

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="brand">
         <div class="avatar">
-          <img src="image\IMG-20251024-WA0005.jpg" alt="Photo">
+          <img src="image/IMG-20251024-WA0005.jpg" alt="Photo">
         </div>
         <div>
           <h1>Davian Mbayi – Développeur Web Junior</h1>
@@ -36,7 +36,7 @@
               <p class="muted" style="margin:0">Passionné par le développement web et les nouvelles technologies</p>
             </div>
             <div>
-              <a class="download" href="Mon CV\Mon_CV.pdf">Télécharger mon CV (PDF)</a>
+              <a class="download" href="Mon CV/Mon_CV.pdf">Télécharger mon CV (PDF)</a>
             </div>
           </div>
         </section>
@@ -54,11 +54,9 @@
                 <div class="meta">JavaScript • 2025</div>
                 <h3>Calcul de la moyenne de n notes</h3>
                 <p class="muted">Programme de calcul d'une moyenne qui prend en entrée des notes et renvoie une moyenne et la liste des notes</p>
-                <a href="Projet\Moyenne.html" target="_blank" class="btn">Voir le code</a>
+                <a href="Projet/Moyenne.html" target="_blank" class="btn">Voir le code</a>
               </div>
             </article>
-            
-            <!-- Ajoutez d'autres projets ici -->
           </div>
         </section>
 
@@ -80,10 +78,10 @@
             
             <div class="formation-item">
               <h3>Etudes Secondaires</h3>
-              <div class="school">Complexe Scolaire La Sommité(R.D. Congo)</div>
+              <div class="school">Complexe Scolaire La Sommité (R.D. Congo)</div>
               <div class="period">2019 - Juillet 2025</div>
               <div class="description">
-                Etudes secondaires en section scientifique avec obtetion du diplôme d'état(équivalent bac s) mention bien.
+                Etudes secondaires en section scientifique avec obtention du diplôme d'état (équivalent bac s) mention bien.
               </div>
             </div>
           </div>
@@ -140,7 +138,7 @@
             </div>
           </div>
         </div>
-        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+
         <section id="certifications" class="card">
           <div class="section-title">
             <h2>Certifications</h2>
@@ -148,15 +146,24 @@
           </div>
 
           <div class="certificates">
+            <!-- Badge Credly -->
+            <div class="certificate with-image">
+              <h3>Introduction to Cybersecurity</h3>
+              <span class="muted">Cisco • 2025</span>
+              <div class="certificate-image" style="text-align: center;">
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div>
+              </div>
+            </div>
+
             <!-- Certification au format PNG -->
-             <div class="certificate with-image">
+            <div class="certificate with-image">
               <h3>Linux Unhatched</h3>
               <span class="muted">Cisco • 2025</span>
               <div class="certificate-image">
-                <img src="certifications\Linux\linux-unhatched.png" alt="Certificat Linux Unhatched">
+                <img src="certifications/Linux/linux-unhatched.png" alt="Certificat Linux Unhatched">
               </div>
-              <a href="certifications\Linux\linux-unhatched.png" target="_blank" class="download small">
-              Télécharger
+              <a href="certifications/Linux/linux-unhatched.png" target="_blank" class="download small">
+                Télécharger
               </a>
             </div>
 
@@ -165,8 +172,8 @@
               <h3>Certification MOOC</h3>
               <span class="muted">ANSSI • 2025</span>
               <div class="certificate-actions">
-                <a href="certifications\ANSSI\Certification ANSSI.pdf" target="_blank" class="download">
-                Voir le PDF
+                <a href="certifications/ANSSI/Certification ANSSI.pdf" target="_blank" class="download">
+                  Voir le PDF
                 </a>
               </div>
             </div>
@@ -176,22 +183,22 @@
               <h3>Atelier RGPD</h3>
               <span class="muted">CNIL • 2025</span>
               <div class="certificate-actions multiple">
-                <a href="certifications\RGPD\Certification module 1 RGPD.pdf" target="_blank" class="download small">
+                <a href="certifications/RGPD/Certification module 1 RGPD.pdf" target="_blank" class="download small">
                   Module 1 : LE RGPD ET SES NOTIONS CLÉS
                 </a>
-                <a href="certifications\RGPD\Certification module 2 RGPD.pdf" target="_blank" class="download small">
+                <a href="certifications/RGPD/Certification module 2 RGPD.pdf" target="_blank" class="download small">
                   Module 2 : LES PRINCIPES DE LA PROTECTION DES DONNÉES
                 </a>
-                <a href="certifications\RGPD\Certification module 3 RGPD.pdf" target="_blank" class="download small">
+                <a href="certifications/RGPD/Certification module 3 RGPD.pdf" target="_blank" class="download small">
                   Module 3 : LES RESPONSABILITÉS DES ACTEURS
                 </a>
-                <a href="certifications\RGPD\Certification module 4 RGPD.pdf" target="_blank" class="download small">
-                  Module 4 :  LE DPO ET LES OUTILS DE LA CONFORMITÉ
+                <a href="certifications/RGPD/Certification module 4 RGPD.pdf" target="_blank" class="download small">
+                  Module 4 : LE DPO ET LES OUTILS DE LA CONFORMITÉ
                 </a>
-                <a href="certifications\RGPD\Certification module 5 RGPD.pdf" target="_blank" class="download small">
-                  MODULE 5 : LES COLLECTIVITÉS TERRITORIALE
+                <a href="certifications/RGPD/Certification module 5 RGPD.pdf" target="_blank" class="download small">
+                  MODULE 5 : LES COLLECTIVITÉS TERRITORIALES
                 </a> 
-                <a href="certifications\RGPD\Attestation_de_suivi Certification module 6 RGPD.pdf" target="_blank" class="download small">
+                <a href="certifications/RGPD/Attestation_de_suivi Certification module 6 RGPD.pdf" target="_blank" class="download small">
                   MODULE 6 : TRAVAIL ET DONNÉES PERSONNELLES
                 </a> 
               </div>
@@ -206,6 +213,7 @@
     </footer>
   </div>
 
+  <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
   <script>
     (function() {
       document.getElementById('year').textContent = new Date().getFullYear();
@@ -226,5 +234,4 @@
     })();
   </script>
 </body>
-
 </html>
