Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="certificates">
             <!-- Badge Credly -->
             <div class="certificate with-image">
-              <h3>Introduction to Cybersecurity</h3>
+              <h3>Linux Unhatched</h3>
               <span class="muted">Cisco • 2025</span>
               <div class="certificate-image" style="text-align: center;">
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div>
@@ -225,4 +225,5 @@
   </script>
 </body>
 </html>
+
 
