Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div>
           <h1>Davian Mbayi – Développeur Web Junior</h1>
-          <p class="lead">Frontend · HTML/CSS · JavaScript · Python</p>
+          <p class="lead">HTML/CSS · JavaScript · Python</p>
         </div>
       </div>
       <nav>
@@ -222,6 +222,7 @@
   </script>
 </body>
 </html>
+
 
 
 
