--- a/Projet/Moyenne.html
+++ b/Projet/Moyenne.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculateur de Moyenne</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Moyenne.css">
+    <link rel="stylesheet" href="moyenne.css">
 </head>
 <body>
     <div class="container">
@@ -22,3 +22,4 @@
     <script src="Moyenne.js"></script>
 </body>
 </html>
+
