Add certifications section to index.html
Added a certifications section to the portfolio.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a class="btn" href="#formation">Formation</a>
         <a class="btn" href="#about">À propos</a>
         <a class="btn" href="#contact">Contact</a>
+        <a class="btn" href="#certifications">Mes Certifications</a>
       </nav>
     </header>
 
@@ -146,7 +147,6 @@
           </div>
 
           <div class="certificates">
-            <!-- Badge Credly -->
             <div class="certificate with-image">
               <h3>Linux Unhatched</h3>
               <span class="muted">Cisco • 2025</span>
@@ -154,7 +154,7 @@
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div>
               </div>
             </div>
-            <!-- Certification au format PDF -->
+
             <div class="certificate">
               <h3>Certification MOOC</h3>
               <span class="muted">ANSSI • 2025</span>
@@ -164,8 +164,6 @@
                 </a>
               </div>
             </div>
-
-            <!-- Certification avec plusieurs PDFs -->
             <div class="certificate">
               <h3>Atelier RGPD</h3>
               <span class="muted">CNIL • 2025</span>
@@ -222,6 +220,7 @@
   </script>
 </body>
 </html>
+
 
 
 
