Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -147,15 +147,16 @@
           </div>
 
           <div class="certificates">
-            <div class="certificate with-image">
               <h3>Linux Unhatched</h3>
               <span class="muted">Cisco • 2025</span>
               <div class="certificate-image" style="text-align: center;">
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div>
-              </div>
             </div>
-
-            <div class="certificate">
+              <h3>Python Essentials 1</h3>
+              <span class="muted">Cisco • 2025</span>
+              <div class="certificate-image" style="text-align: center;">
+                <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="df378d44-7777-4b22-b93c-401fe68e2abc" data-share-badge-host="https://www.credly.com"></div>
+              </div>
               <h3>Certification MOOC</h3>
               <span class="muted">ANSSI • 2025</span>
               <div class="certificate-actions">
@@ -220,6 +221,7 @@
   </script>
 </body>
 </html>
+
 
 
 
