Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -147,16 +147,26 @@
           </div>
 
           <div class="certificates">
+            <!-- Certification Linux Unhatched -->
+            <div class="certificate">
               <h3>Linux Unhatched</h3>
               <span class="muted">Cisco • 2025</span>
-              <div class="certificate-image" style="text-align: center;">
+              <div class="certificate-image">
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="e0d39be5-528f-4297-b6cd-8f1cae74c0ed" data-share-badge-host="https://www.credly.com"></div>
+              </div>
             </div>
+
+            <!-- Certification Python Essentials 1 -->
+            <div class="certificate">
               <h3>Python Essentials 1</h3>
               <span class="muted">Cisco • 2025</span>
-              <div class="certificate-image" style="text-align: center;">
+              <div class="certificate-image">
                 <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="df378d44-7777-4b22-b93c-401fe68e2abc" data-share-badge-host="https://www.credly.com"></div>
               </div>
+            </div>
+
+            <!-- Certification MOOC ANSSI -->
+            <div class="certificate">
               <h3>Certification MOOC</h3>
               <span class="muted">ANSSI • 2025</span>
               <div class="certificate-actions">
@@ -165,6 +175,8 @@
                 </a>
               </div>
             </div>
+
+            <!-- Atelier RGPD -->
             <div class="certificate">
               <h3>Atelier RGPD</h3>
               <span class="muted">CNIL • 2025</span>
@@ -182,10 +194,10 @@
                   Module 4 : LE DPO ET LES OUTILS DE LA CONFORMITÉ
                 </a>
                 <a href="certifications/RGPD/Certification module 5 RGPD.pdf" target="_blank" class="download small">
-                  MODULE 5 : LES COLLECTIVITÉS TERRITORIALES
+                  Module 5 : LES COLLECTIVITÉS TERRITORIALES
                 </a> 
                 <a href="certifications/RGPD/Attestation_de_suivi Certification module 6 RGPD.pdf" target="_blank" class="download small">
-                  MODULE 6 : TRAVAIL ET DONNÉES PERSONNELLES
+                  Module 6 : TRAVAIL ET DONNÉES PERSONNELLES
                 </a> 
               </div>
             </div>
@@ -221,9 +233,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
